# Zotero-Notion-Paper-Flow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  LICENSE_en.txt  MIGRATION.md  README.md  README_EN.md  WARP.md  config.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-test.yml  code-review.yml  pr-template-fill.yml  release.yml
desktop-app/: BUGFIXES.md  README.md  main.js  package-lock.json  package.json  preload.js
desktop-app/assets/: ICONS.md
desktop-app/renderer/: index.html  renderer.js  styles.css
docs/: CONTRIBUTING.md  FEISHU_SETUP.md  MIGRATION.md  api.md  architecture.md  troubleshooting.md
scripts/: build-all.sh
src/: __init__.py  cli.py  compat.py  container.py  daily_paper_app.py  daily_paper_app2.py  main.py  paper_query_app.py  zotero_service_test.py
src/apps/: __init__.py  daily_paper.py
src/common_utils/: __init__.py  utils.py  zotero_utils.py
src/common_utils/json_templates/: artwork.json  audioRecording.json  bill.json  blogPost.json  book.json  bookSection.json  case.json  computerProgram.json  conferencePaper.json  dataset.json  dictionaryEntry.json  document.json  email.json  encyclopediaArticle.json  film.json  forumPost.json  hearing.json  instantMessage.json  interview.json  letter.json  magazineArticle.json  manuscript.json  map.json  newspaperArticle.json  patent.json  podcast.json  preprint.json  presentation.json  radioBroadcast.json  report.json  standard.json  statute.json  thesis.json  tvBroadcast.json  videoRecording.json  webpage.json
src/config/: __init__.py  settings.py
src/core/: __init__.py  processor.py
src/entity/: formatted_arxiv_obj.py
src/interfaces/: __init__.py  data_source.py  llm.py  storage.py
src/models/: __init__.py  paper.py
src/service/: __init__.py  arxiv_visitor.py  config.json  feishu_service.py  hf_visotor.py  llm_service.py  notion_service.py  parameters_setting.md  pdf_downloader.py  wolai_service.py  zotero_service.py
src/services/: __init__.py
src/services/data_sources/: __init__.py  arxiv.py  base.py  factory.py  huggingface.py
src/services/llm/: __init__.py  base.py  deepseek.py  factory.py  kimi.py  zhipu.py
src/services/storage/: __init__.py  base.py  factory.py  notion.py  zotero.py
src/test/: zotero_service_test.py
tests/: conftest.py
tests/integration/: __init__.py  test_processor.py
tests/unit/: __init__.py  test_config.py  test_feishu_service.py  test_llm_service.py  test_paper_model.py
