[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-flow"
dynamic = ["version"]
description = "Automated paper collection and management tool that fetches papers from HuggingFace Daily Papers and arXiv"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Xiaodong Zheng", email = "sheldon123z@example.com"}
]
maintainers = [
    {name = "Xiaodong Zheng", email = "sheldon123z@example.com"}
]
keywords = [
    "arxiv",
    "paper-management",
    "notion",
    "zotero",
    "llm",
    "research-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "arxiv>=2.1.0",
    "tqdm>=4.64.0",
    "openai>=1.28.0",
    "click>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]
slack = [
    "slack_sdk>=3.21.0",
]
all = [
    "slack_sdk>=3.21.0",
]

[project.urls]
Homepage = "https://github.com/sheldon123z/Zotero-Notion-Paper-Flow"
Repository = "https://github.com/sheldon123z/Zotero-Notion-Paper-Flow"
Issues = "https://github.com/sheldon123z/Zotero-Notion-Paper-Flow/issues"
Documentation = "https://github.com/sheldon123z/Zotero-Notion-Paper-Flow#readme"

[project.scripts]
paper-flow = "src.main:main"
paper-assistant = "src.daily_paper_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
